--- a/estilos.css
+++ b/estilos.css
@@ -44,8 +44,8 @@ html {
 }
 
 body {
-    background: rgb(131,58,180);
-    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+    background: rgb(34,195,177);
+    background: linear-gradient(0deg, rgba(34,195,177,1) 0%, rgba(55,207,223,0.6192226890756303) 100%);
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.06);
     color: #545454;
     font-family: "Helvetica Neue", "Helvetica", "arial", "sans-serif";
