--- a/estilos.css
+++ b/estilos.css
@@ -38,8 +38,8 @@
 }
 
 html {
-    background: #e6e9e9;
-    background-image: linear-gradient(270deg, rgb(230, 233, 233) 0%, rgb(216, 221, 221) 100%);
+     background: rgb(34,195,177);
+     background: linear-gradient(0deg, rgba(34,195,177,1) 0%, rgba(55,207,223,0.6192226890756303) 100%);
     -webkit-font-smoothing: antialiased;
 }
 
